<resources>
  <string name="app_full_name">Battery Indicator Pro</string>
  <string name="app_launcher_name">Battery Indicator</string>
  <string name="settings_activity_name">Battery Indicator Pro - Settings</string>
  <string name="settings_help_activity_name">@string/settings_activity_name</string>
  <string name="help_activity_name">Battery Indicator Pro - Help</string>
  <string name="log_view_activity_name">Battery Indicator Pro - Logs</string>
  <string name="app_full_name_free">Battery Indicator</string>
  <string name="settings_activity_name_free">Battery Indicator - Settings</string>
  <string name="settings_help_activity_name_free">@string/settings_activity_name_free</string>
  <string name="help_activity_name_free">Battery Indicator - Help</string>
  <string name="main_window_title">@string/app_full_name</string>
  <string name="main_window_title_free">@string/app_full_name_free</string>
  <string name="battery_use_b">View Battery Use</string>
  <string name="upgrade_donate_b">Upgrade/Donate...</string>
  <string name="reenable_lock_screen">Reenable Lock Screen</string>
  <string name="disable_lock_screen">Disable Lock Screen</string>
  <string name="confirm_disable">Really disable lock screen?</string>
  <string name="confirm_disable_hint">
    Hint: Disable this confirmation dialog in the settings...
  </string>
  <string name="yes">Yes</string>
  <string name="cancel">Cancel</string>
  <string name="confirm_close">Really Close?</string>
  <string name="confirm_close_hint">
    Battery Indicator will be completely closed, and you won\'t see it
    in your status bar any more.\n

    \nIf you just want to leave the main window and keep the indicator
    running, press Cancel and then just press your phone\'s BACK
    button to leave the main window.
  </string>
  <string name="confirm_clear_logs">Really clear all logs?</string>
  <string name="confirm_ten_percent_enable">Really enable 10% Mode?</string>
  <string name="confirm_ten_percent_disable">Really disable 10% Mode?</string>
  <string name="confirm_ten_percent_hint">
    Warning: Changing this setting (both enabling and disabling it)
    will reset your color settings.\n

    \nIf you have a Motorola Droid, Motorola Droid X,
    Motorola Droid 2, or Samsung Moment, you should turn
    this on when you first get the app, and then leave it alone.  All
    other phones, as far as I know, should always leave this off.
  </string>
  <string name="first_run_title">Thank you!</string>
  <string name="first_run_message">Thanks
    for your donation/purchase!  <b><i>These two points are very important</i> :</b>\n

    \n• If you have a \"<b>task killer</b>\" / process manager of some kind, you should either
      uninstall it or try to get it to ignore Battery Indicator Pro.  Even if you
      have it set to ignore the free version, <i>you still need to tell it to
      ignore this Pro version</i> !\n

    \n• If you have a <b>Motorola Droid</b>, <b>Motorola Droid X</b>,
      <b>Motorola Droid 2</b>, or <b>Samsung Moment</b>, you should turn on
      \"10% Mode\" in the \"Other Settings\".
  </string>
  <string name="first_run_message_free">Thanks
    for downloading Battery Indicator!  <b><i>This is important</i> :</b>\n

    \nIf you have a \"<b>task killer</b>\" / process manager of some kind, you should either
      uninstall it or try to get it to ignore Battery Indicator.
  </string>
  <string name="okay">Okay</string>
  <string name="menu_logs">Logs</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_close">Close</string>
  <string name="menu_help">Help</string>
  <string name="menu_clear">Clear</string>
  <string name="menu_reverse">Reverse Order</string>
  <string name="menu_export">Export CSV</string>
  <string name="menu_delete_alarm">Delete Alarm</string>
  <string name="percent_symbol">%</string>
  <string name="degree_symbol">°</string>
  <string name="fahrenheit">Fahrenheit</string>
  <string name="fahrenheit_symbol">F</string>
  <string name="celsius">Celsius</string>
  <string name="celsius_symbol">C</string>
  <string name="volt_symbol">V</string>
  <string name="fully_charged_in">Fully Charged in:</string>
  <string name="light_usage">Light Usage Left:</string>
  <string name="normal_usage">Normal Usage Left:</string>
  <string name="heavy_usage">Heavy Usage Left:</string>
  <string name="constant_usage">Constant Usage Left:</string>
  <string name="press_back_to_leave">Press BACK to leave.</string>
  <string name="press_menu_for_more">Press MENU for more items.</string>
  <string name="inaccessible_storage">SD Card is inaccessible.</string>
  <string name="inaccessible_w_reason">SD Card inaccessible: </string>
  <string name="read_only_storage">SD Card is read only.</string>
  <string name="file_written">File successfully written to root of SD card.</string>
  <string name="date">date</string>
  <string name="time">time</string>
  <string name="status">status</string>
  <string name="charge">charge_percentage</string>
  <string name="temperature">degrees_celsius</string>
  <string name="voltage">volts</string>
  <string-array name="statuses">
    <item>Unplugged</item>
    <item>Unknown</item>
    <item>Charging</item>
    <item>Discharging</item>
    <item>Not Charging</item>
    <item>Fully Charged</item>
  </string-array>
  <string-array name="log_statuses">
    <item>Unplugged</item>
    <item>Unknown</item>
    <item>Plugged In</item>
    <item>Unknown</item>
    <item>Unknown</item>
    <item>Fully Charged</item>
  </string-array>
  <string-array name="log_statuses_old">
    <item>Discharging</item>
    <item>Unknown</item>
    <item>Charging</item>
    <item>Unknown</item>
    <item>Unknown</item>
    <item>Fully Charged</item>
  </string-array>
  <string-array name="healths">
    <item>Unknown</item>
    <item>Unknown</item>
    <item>Good Health</item>
    <item>Overheat</item>
    <item>Dead</item>
    <item>Overvoltage</item>
    <item>Failure</item>
  </string-array>
  <string-array name="pluggeds">
    <item>Unknown</item>
    <item>(AC)</item>
    <item>(USB)</item>
  </string-array>
  <string-array name="alarm_types_display">
    <item>Fully charged</item>
    <item>Charge drops below</item>
    <item>Charge rises above</item>
    <item>Temperature rises above</item>
    <item>Health failure</item>
  </string-array>
  <string-array name="alarm_type_entries">
    <item>Becomes fully charged</item>
    <item>Charge drops below...</item>
    <item>Charge rises above...</item>
    <item>Temperature rises above...</item>
    <item>Health fails</item>
  </string-array>
  <string-array name="alarm_type_values">
    <item>fully_charged</item>
    <item>charge_drops</item>
    <item>charge_rises</item>
    <item>temp_rises</item>
    <item>health_failure</item>
  </string-array>
  <string name="alarm_fully_charged">Battery is now fully charged</string>
  <string name="alarm_charge_drops">"Battery charge is below "</string>
  <string name="alarm_charge_rises">"Battery charge is above "</string>
  <string name="alarm_temp_rises">"Battery temp. is above "</string>
  <string name="alarm_health_failure">"Battery health is: "</string>
  <string name="alarm_text">Select to edit alarms.</string>
  <string name="logs_empty">Logs Are Empty</string>
  <plurals name="n_log_items">
    <item quantity="one">%d Log Item</item>
    <item quantity="other">%d Log Items</item>
  </plurals>
  <string name="discharging_from">Discharging from</string>
  <string name="charging_from">Charging from</string>
  <string name="fully_charged">Fully Charged</string>
  <string name="since">Since</string>
  <plurals name="for_n_hours">
    <item quantity="one">For %d Hour</item>
    <item quantity="other">For %d Hours</item>
  </plurals>
  <string name="one_six_needed">Sorry, Android 1.6+ needed!</string>
  <string name="currently_using">Currently using</string>
  <string name="currently_set_to">"Currently set to: "</string>
  <string name="currently_disabled">Currently Disabled</string>
  <string name="help_cat_version">Version</string>
  <string name="help_cat_changelog">Changelog</string>
  <string name="help_changelog">
    See the <a href="http://code.google.com/p/battery-indicator/wiki/FAQ#What's_new_in_the_update?">version
      history on the project FAQ</a>.
  </string>
  <string name="help_cat_introduction">Introduction</string>
  <string name="help_introduction">This
    is <i>Battery Indicator Pro</i>, the \"Pro\" version of the
    popular free app, <i>Battery Indicator</i>.  It\'s available for
    purchase from the Android Market, but it\'s an open source
    project, which means you can download the source for free
    from <a href="http://code.google.com/p/battery-indicator/">the
    project website</a>.
  </string>
  <string name="help_introduction_free">This
    is <i>Battery Indicator</i>, the free version of the
    <i>Battery Indicator</i> family of apps.  It\'s available from
    the Android Market, and it\'s an open source project,
    which means you can download the source for free
    from <a href="http://code.google.com/p/battery-indicator/">the
    project website</a>.\n

    \nPlease consider donating by upgrading to the
    <a href="market://details?id=com.darshancomputing.BatteryIndicatorPro">Pro
      Version</a>.
  </string>
  <string name="help_cat_summary">Summary</string>
  <string name="help_summary"><i>Battery
    Indicator Pro</i> is a lightweight battery indicator for the
    Android™ mobile operating system.  Its core feature is that it
    provides an icon that lives in the status bar and shows you the
    percentage of battery charge left.\n

    \nThis Pro version offers a great deal more utility than that,
    however.  Besides offering red, amber, and green icons, it also
    has the following key features as of version 3.0:\n

    \n• Fully configurable estimated charge/discharge time left.
    \n• Logging of battery state.
    \n• Themes for the main window (including a full-size window with
    large, easy-to-read text).
    \n• Manually disable/reenable the device lock screen, with the option
    to automatically disable it when plugged in and reenable it when unplugged.
    \n• Many more useful things that you\'ll discover throughout.
  </string>
  <string name="help_summary_free"><i>Battery
    Indicator</i> is a lightweight battery indicator for the
    Android™ mobile operating system.  Its core feature is that it
    provides an icon that lives in the status bar and shows you the
    percentage of battery charge left.\n

    \nThe Pro version offers a great deal more utility than that,
    however.  Besides offering red, amber, and green icons, it also
    has the following key features as of version 3.0:\n

    \n• Fully configurable estimated charge/discharge time left.
    \n• Logging of battery state.
    \n• Themes for the main window (including a full-size window with
    large, easy-to-read text).
    \n• Manually disable/reenable the device lock screen, with the option
    to automatically disable it when plugged in and reenable it when unplugged.
    \n• Many more useful things that you\'ll discover throughout.
  </string>
  <string name="help_cat_limitations">Limitations</string>
</resources>