<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_frame"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/panel_background"
>
      <LinearLayout android:id="@+id/main_content"
                    android:orientation="vertical"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp"
                    android:paddingTop="4dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="7dp"
      >
        <TextView android:id="@+id/title_t"
	          android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:textColor="#fff"
                  android:textSize="16sp"
                  android:text="@string/main_window_title"
        />

        <TextView android:id="@+id/status_since_t"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:paddingBottom="2dp"
                  android:textColor="#A4C639"
                  android:textSize="12sp"
        />

        <View android:layout_width="fill_parent"
              android:layout_height="2dp"
        />

        <Button android:id="@+id/battery_use_b"
                android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/battery_use_b"
        />

        <View android:layout_width="fill_parent"
              android:layout_height="5dp"
        />

        <Button android:id="@+id/upgrade_donate_b"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/upgrade_donate_b"
        />

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="4dp"
                  android:paddingTop="2dp"
                  android:paddingBottom="5dp"
                  android:textColor="#FFF"
                  android:textSize="12sp"
                  android:text="@string/press_back_to_leave"
        />

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="4dp"
                  android:textColor="#FFF"
                  android:textSize="12sp"
                  android:text="@string/press_menu_for_more"
        />

        <View android:layout_width="fill_parent"
              android:layout_height="2dp"
        />
      </LinearLayout>
</LinearLayout>
